# cynical_engine

./: .gitignore  CMakeLists.txt  README.md  cynical_math.h  main.c
dependencies/include/glew/: glew.h
dependencies/include/linmath/: linmath.h
engine/: cynical_engine.c
engine/entity/: cynical_entity.c
engine/graphics/: cynical_camera.c  cynical_graphics.c  cynical_render.c
engine/input/: cynical_input.c
engine/math/: cynical_math.c
engine/memory/: frame_memory.c
engine/time/: cynical_time.c
engine/video/: cynical_video.c
include/: cynical_camera.h  cynical_collections.h  cynical_debug.h  cynical_engine.h  cynical_entity.h  cynical_graphics.h  cynical_includes.h  cynical_input.h  cynical_log.h  cynical_math.h  cynical_memory.h  cynical_render.h  cynical_time.h  cynical_video.h
